# lll-simple-ai-service

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
ai-service/: pyproject.toml  requirements.txt
ai-shared/: README.md  pyproject.toml
ai-shared/lll_simple_ai_shared/: __init__.py
ai-shared/lll_simple_ai_shared/data_models/: __init__.py  behavior_models.py  episodic_memories_models.py  morning_situation.py  recall_results_models.py  understand_models.py
ai-shared/lll_simple_ai_shared/utils/: __init__.py  date.py  extract.py
ai-training/: pyproject.toml  requirements.txt
ai-training/lll_simple_ai_training/: __init__.py
ai-training/lll_simple_ai_training/config/: __init__.py  default_config.py
ai-training/lll_simple_ai_training/core/: __init__.py  base_trainer.py  data_processor.py  lora_trainer.py
ai_service/: __init__.py
ai_service/config/: default_config.py
ai_service/core/: schemas.py  structured_ai.py
my-service/: pyproject.toml  requirements.txt
my-training/: pyproject.toml  requirements.txt
scripts/: download_model.py  start_service.py
